<resources>
    <string name="app_name">A4_1155150604</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fragment_chatroom">fragment_chatroom</string>
    <string name="fragment_chat">fragment_chat</string>
    <string name="fragment_login">fragment_login</string>
    <string name="fragment_sign_up">fragment_sign_up</string>
    <string name="default_chatroom">Default Chatroom</string>
    <string name="previous">Previous</string>
    <string name="user_id_length_hint">Your user ID must be between 4 to 9 chars</string>

    <string name="exit">Exit</string>
    <string name="logout">Log out</string>
    <string name="refresh">Refresh</string>
    <string name="socket_connect_error">Socket connect error</string>
    <string name="socket_user_joined">Socket connected, you have successfully enrolled in this chatroom</string>
    <string name="socket_disconnected">Socket disconnected</string>
    <string name="input_text_hint">Input Your Text Here</string>
    <string name="input_user_name_hint">Username</string>
    <string name="input_user_password_hint"> Password</string>
    <string name="input_user_id_hint"> ID</string>

    <string name="user_name_empty">Please enter your username</string>
    <string name="user_name_length_hint">Your username must be between 4 to 20 chars</string>
    <string name="user_id_empty">Please enter your user ID</string>
    <string name="user_password_empty">Please enter your password</string>
    <string name="user_password_length_hint">Your password must be between 4 to 20 chars</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="red_envelope">Red Envelope</string>

    <string name="Generate_QR_Code">My QR Code</string>
    <string name="Scan_QR_Code">Scan </string>


</resources>