<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.A4_1155150604.ChatroomActivity">
    <item android:id="@+id/action_add_friend"
        android:title="add friend"
        app:showAsAction="ifRoom"
        android:icon="@drawable/add_icon"/>
    <item android:id="@+id/Gen_QRcode"
        android:title="@string/Generate_QR_Code"
        app:showAsAction="never" />
    <item android:id="@+id/scan_QR_Code"
        android:title="@string/Scan_QR_Code"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>