<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivityFragment">


    <EditText
        android:id="@+id/et_user_id"
        android:layout_centerHorizontal="true"
        android:layout_width="250sp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_user_id_hint"
        android:maxLines="3"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        android:background="@drawable/background_login" />
    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="250sp"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:hint="@string/input_user_name_hint"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/et_user_id"
        android:background="@drawable/background_login"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="250sp"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:hint="@string/input_user_password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/et_user_name"
        android:background="@drawable/background_login"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/et_user_password"

        android:text="SIGN UP"
        android:textColor="#fff"
        android:textSize="12sp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>